fix: adjusted spacing around headings

--- a/components/atoms/Panel/panel.module.scss
+++ b/components/atoms/Panel/panel.module.scss
@@ -13,6 +13,6 @@
 
 @include mq($from: tablet) {
   .panel {
-    height:calc(100vh - 230px);
+    height:calc(100vh - 245px);
   }
 }
