--- a/styles/global/_global.scss
+++ b/styles/global/_global.scss
@@ -181,7 +181,7 @@ select {
       &_right {
         .header {
           display: flex;
-          margin-top: 10px;
+          margin-top: 15px;
           vertical-align: middle;
 
           .filters {
@@ -202,7 +202,7 @@ select {
         }
 
         .panel {
-          margin-top: 25px;
+          margin-top: 28px;
         }
       }
     }
